clase 2 HTML5 nivel II

--- a/HTML5_II/David/Ejemplo01.html
+++ b/HTML5_II/David/Ejemplo01.html
@@ -14,11 +14,11 @@
   <div class="contenido">
     <nav class="col-s-3 col-3">
       <ul>
-        <li>Canvas</li>
-        <li>Geolocalizacion</li>
-        <li>Drag and Drop</li>
-        <li>WebWorker</li>
-        <li>Documentación</li>
+        <a href="./Ejemplo02_Canvas.html"><li>Canvas</li></a>
+        <a href="./Ejemplo03_Geolocalizacion.html"><li>Geolocalizacion</li></a>
+        <a href=""><li>Drag and Drop</li></a>
+        <a href=""><li>WebWorker</li></a>
+        <a href="https://developer.mozilla.org/es/docs/Web/API" target="_blank"><li>Documentación</li></a>
       </ul>
     </nav>
     <section class="col-s-9 col-6">
