--- a/HTML5_II/Henry/Ejemplo01.html
+++ b/HTML5_II/Henry/Ejemplo01.html
@@ -15,11 +15,11 @@
   <div class="contenido">
     <nav class="col-s-3 col-3">
       <ul>
-        <li>Canvas</li>
-        <li>Geolocalizacion</li>
-        <li>Drag and Drop </li>
-        <li>Web worker</li>
-        <li>Documentacion</li>
+        <a href="./ejemplo02.html" target="_blank"><li>Canvas</li></a>
+        <a href="./ejemplo03.html" target="_blank"><li>Geolocalizacion</li></a>
+        <a href="./ejemplo02.html" target="_blank"><li>Drag and drop</li></a>
+        <a href="./ejemplo02.html" target="_blank"><li>Web worker</li></a>
+        <a href="https://developer.mozilla.org/es/docs/Web/API"target="_blank"><li>Documentacion</li></a>
       </ul>
     </nav>
     <section class="col-s-9 col-6">
