--- a/HTML5_II/PROFESOR/ejemplo01.html
+++ b/HTML5_II/PROFESOR/ejemplo01.html
@@ -14,11 +14,11 @@
     <div class="contenido">
         <nav class="col-s-3 col-3">
             <ul>
-                <li>Canvas</li>
-                <li>Geolocalización</li>
+                <a href="./ejemplo02_canvas.html"><li>Canvas</li></a>
+                <a href="./ejemplo03_geolocation.html"><li>Geolocalización</li></a>
                 <li>Drag and Drop</li>
                 <li>Web Worker</li>
-                <li>Documentación</li>
+                <a href="https://developer.mozilla.org/es/docs/Web/API"><li>Documentación</li></a>
             </ul>
         </nav>
         <section class="col-s-9 col-6">
