--- a/HTML5_II/REINALDO/Ejemplo01.html
+++ b/HTML5_II/REINALDO/Ejemplo01.html
@@ -5,96 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ejemplo01 APIs</title>
   <link rel="shortcut icon" href="../img/uneweb_icono.png" type="image/x-icon">
-  <style>
-    *{
-      font-family: Arial, Helvetica, sans-serif;
-      box-sizing: border-box;
-    }
-    
-      .contenido::after{
-        content: "";
-        display: table;
-        clear:both;
-      }
-      [class*="col-"]{
-        float: left;
-        padding: 15px;
-      }
-      header{
-        padding: 15px;
-        background-color: burlywood;
-        color: black;
-      }
-      nav ul{
-        list-style: none;
-        margin: 0px;
-        padding: 0px;
-      }
-
-      nav a{
-        text-decoration: none;
-      }
-      nav li{
-        padding: 8px;
-        background-color: darkolivegreen;
-        color: beige;
-        box-shadow: 0px 3px 5px gray;
-        margin-bottom: 7px;
-      }
-      nav li:hover{
-          background-color: slategray;
-      }
-      aside{
-        padding: 15px;
-        background-color: rgb(71, 56, 39);
-        color: beige;
-        font-size: 14px;
-      }
-      footer{
-        padding: 15px;
-        background-color: burlywood;
-        color: black;
-        font-size: 14px;
-        text-align: center;
-      }
-      section{
-        color: black;
-      }
-    /* Propiedades para Celular*/
-    [class*="col-"]{
-      width: 100%;
-    }
-    /* Propiedades Para Tablet */
-    @media only screen and (min-width:600px){
-      .col-s-1{width:8.33%;}
-      .col-s-2{width:16.66%;}
-      .col-s-3{width:25%;}
-      .col-s-4{width:33.33%;}
-      .col-s-5{width:41.66%;}
-      .col-s-6{width:50%;}
-      .col-s-7{width:58.33%;}
-      .col-s-8{width:66.66%;}
-      .col-s-9{width:75%;}
-      .col-s-10{width:83.33%;}
-      .col-s-11{width:91.66%;}
-      .col-s-12{width:100%;}
-    }
-        /* Propiedades Para PC */
-        @media only screen and (min-width:768px){
-      .col-1{width:8.33%;}
-      .col-2{width:16.66%;}
-      .col-3{width:25%;}
-      .col-4{width:33.33%;}
-      .col-5{width:41.66%;}
-      .col-6{width:50%;}
-      .col-7{width:58.33%;}
-      .col-8{width:66.66%;}
-      .col-9{width:75%;}
-      .col-10{width:83.33%;}
-      .col-11{width:91.66%;}
-      .col-12{width:100%;}
-      }
-  </style>
+  <link rel="stylesheet" href="./CSS/Ejemplo01.css">
 </head>
 <body>
   <header>
@@ -103,11 +14,11 @@
   <div class="contenido">
     <nav class="col-s-3 col-3">
     <ul>
-        <li>Canvas </li>
-        <li>Geolocalizacion</li>
+        <a href="./Ejemplo02_canvas.html"><li>Canvas </li></a>
+        <a href="./Ejemplo03_geolocation.html"><li>Geolocalizacion</li></a>
         <li>Drag and Drop</li>
         <li>Web Worker</li>
-        <li>Documentación</li>
+        <a href="https://developer.mozilla.org/es/docs/Web/API"><li>Documentación</li></a>
     </ul>
     </nav>
     <section class="col-s-9 col-6">
