--- a/HTML5_II/REINALDO/Ejemplo01.html
+++ b/HTML5_II/REINALDO/Ejemplo01.html
@@ -16,8 +16,8 @@
     <ul>
         <a href="./Ejemplo02_canvas.html"><li>Canvas </li></a>
         <a href="./Ejemplo03_geolocation.html"><li>Geolocalizacion</li></a>
-        <li>Drag and Drop</li>
-        <li>Web Worker</li>
+        <a href="./Ejemplo04_DrapAndDrop.html"><li>Drag and Drop</li></a>
+        <a href="./Ejemplo05_WebWorker.html"><li>Web Worker</li></a>
         <a href="https://developer.mozilla.org/es/docs/Web/API"><li>Documentación</li></a>
     </ul>
     </nav>
