--- a/HTML5_II/REINALDO/Ejemplo03_geolocation.html
+++ b/HTML5_II/REINALDO/Ejemplo03_geolocation.html
@@ -16,6 +16,7 @@
       <a href="Ejemplo01.html">Regresar al menú</a>
       <br>
       <button onclick="obtenerCoordenadas()">Obtener Coordenadas</button>
+      <button id="btnVerMapa" onclick="verMapa()" disabled> Ver mapa</button>
       <br>
       <div id="resultado"></div>
       <script src="./js/Ejemplo03.js"></script>
