--- a/HTML5_II/marianny/ejemplo01.html
+++ b/HTML5_II/marianny/ejemplo01.html
@@ -16,7 +16,7 @@
             <ul>
                 <a href="./ejemplo02_canvas.html"><li>Canvas</li></a>
                 <a href="./ejemplo03_geolocation.html"><li>Geolocalización</li></a>
-                <li>Drag and Drop</li>
+                <a href="./ejemplo04_dragandrop.html"><li>Drag and Drop</li></a>
                 <li>Web Worker</li>
                 <a href="https://developer.mozilla.org/es/docs/Web/API"><li>Documentación</li></a>
             </ul>
