--- a/HTML5_II/Henry/ejemplo03.html
+++ b/HTML5_II/Henry/ejemplo03.html
@@ -8,13 +8,17 @@
     <link rel="stylesheet" href="">
 </head>
 <body>
-    <h1>Api Canvas</h1>
+    <h1>Api Geolocalización</h1>
     <br>
     <a href="https://developer.mozilla.org/es/docs/Web/API/Geolocation_API" target="_blank">Documentación</a>
     <br>
     <a href="./ejemplo01.html">Regresar al menú</a>
     <br>
     <button onclick="obtenerCoordenadas()">Obtener coordenadas</button>
+    <!-- 
+    El atributo "disabled" inhibe el botón, hasta que se habilite nuevamente mediante la obtención de coordenadas.
+    -->
+    <button id="btnVerMapa" onclick="verMapa()" disabled>Ver mapa</button>
     <br>
     <div id="resultado"></div>
     <script src="./JS/ejemplo3.js"></script>
