clase 5 html5 nivel II

--- a/HTML5_II/David/Ejemplo08.html
+++ b/HTML5_II/David/Ejemplo08.html
@@ -4,14 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../img/uneweb_icono.png" type="image/x-icon">
-  <link rel="stylesheet" href="./CSS/Ejemplo07.css">
-  <title>Ejemplo 07</title>
+  <link rel="stylesheet" href="./CSS/Ejemplo08.css">
+  <title>Ejemplo 08</title>
 </head>
 <body>
   <h1>Galería</h1>
+  <div id="fecha_hora">
+
+  </div>
   <h2>Mejores crocs</h2>
   <div id="principal">
-    <img src="./img/5.jpg" alt="" id="imagenPrincipal">
+    <img src="./img/5.jpg" alt="" id="imagen_principal">
   </div>
   <div id="secundario">
     <img id="img_1" src="./img/1.jpg" alt="" onclick="cambiarImagen(this)">
@@ -20,6 +23,6 @@
     <img id="img_4" src="./img/4.webp" alt="" onclick="cambiarImagen(this)">
   </div>
 
-  <script src="./JS/Ejemplo07.js"></script>
+  <script src="./JS/Ejemplo08.js"></script>
 </body>
 </html>
