--- a/HTML5_II/Henry/ejemplo07.html
+++ b/HTML5_II/Henry/ejemplo07.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejemplo07</title>
-    <link rel="shortcut icon" href="../img/uneweb_icono.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/ejemplo07.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="../img/uneweb_icono.png" type="image/x-icon">
+  <title>Rotación de Imágenes</title>
+  <link rel="stylesheet" href="./css/ejemplo07.css">
 </head>
 <body>
-    <h1>Galería</h1>
-    <div id="principal">
-        <img id="imagen_principal"  src="./img/Fantastic fn.jpg" alt="">
-    </div>
-    <div id="secundario">
-        <img src="./img/Fantastic fn.jpg" alt="">
-        <img src="./img/green fn.webp" alt="">
-        <img src="./img/kfc nigg.png" alt="">
-        <img src="./img/TAHITI.jpg" alt="">
-    </div>
-    <script src="./JS/ejemplo07.js"></script>
+  <div id="principal">
+    <img id="imagen_principal" src="./img/Fantastic fn.jpg" alt="Imagen principal">
+  </div>
+  <div id="secundario">
+    <img src="./img/Fantastic fn.jpg" alt="Imagen 1">
+    <img src="./img/green fn.webp" alt="Imagen 2">
+    <img src="./img/kfc nigg.png" alt="Imagen 3">
+    <img src="./img/TAHITI.jpg" alt="Imagen 4">
+  </div>
+  <script src="./JS/ejemplo07.js"></script>
 </body>
 </html>
