--- a/HTML5_II/Henry/ejemplo08.html
+++ b/HTML5_II/Henry/ejemplo08.html
@@ -3,33 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejemplo07</title>
+    <title>Ejemplo08</title>
     <link rel="shortcut icon" href="../img/uneweb_icono.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/ejemplo07.css">
+    <link rel="stylesheet" href="./css/ejemplo08.css">
 </head>
 <body>
     <h1>Galería</h1>
+    <div id="fecha_hora"></div>
     <div id="principal">
-        <img id="imagen_principal" src="./img/1.jfif" alt="">
+        <img id="imagen_principal" src="./img/Fantastic fn.jpg" alt="">
     </div>
     <div id="secundario">
-        <img src="./img/1.jfif" 
+        <img src="./img/Fantastic fn.jpg" 
              id="img_1"
              alt="" 
              onclick="cambiarImagen(this)">
-        <img src="./img/2.jfif" 
+        <img src="./img/green fn.webp" 
              id="img_2"
              alt="" 
              onclick="cambiarImagen(this)">
-        <img src="./img/3.jfif" 
+        <img src="./img/kfc nigg.png" 
              id="img_3"
              alt="" 
              onclick="cambiarImagen(this)">
-        <img src="./img/4.jfif" 
+        <img src="./img/TAHITI.jpg" 
              id="img_4"
              alt="" 
              onclick="cambiarImagen(this)">
     </div>
-    <script src="./js/ejemplo07.js"></script>
+    <script src="./JS/ejemplo08.js"></script>
 </body>
 </html>
