--- a/HTML5_II/REINALDO/Ejemplo08.html
+++ b/HTML5_II/REINALDO/Ejemplo08.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ejemplo07</title>
+  <title>Ejemplo08</title>
   <link rel="shortcut icon" href="../img/uneweb_icono.png" type="image/x-icon">
-  <link rel="stylesheet" href="./CSS/Ejemplo07.css">
+  <link rel="stylesheet" href="./CSS/Ejemplo08.css">
 </head>
 <body>
 <h1> Galeria</h1>
+<div id="fecha_hora"  ></div>
 <div id="principal">
   <img id="imagen_principal" src="./img/1.jpeg" alt="">
 </div>
@@ -30,6 +31,6 @@
   alt="" 
   onclick= "cambiarImagen(this)" >
 </div>
-  <script src="./js/Ejemplo07.js"></script>
+  <script src="./js/Ejemplo08.js"></script>
 </body>
 </html>
