--- a/HTML5_II/marianny/ejemplo07.html
+++ b/HTML5_II/marianny/ejemplo07.html
@@ -13,10 +13,22 @@
         <img id="imagen_principal" src="./img/5.jfif" alt="">
     </div>
     <div id="secundario">
-        <img src="./img/1.jfif" alt="" onclick="cambiarImagen(this)">
-        <img src="./img/2.jfif" alt="" onclick="cambiarImagen(this)">
-        <img src="./img/3.jfif" alt="" onclick="cambiarImagen(this)">
-        <img src="./img/4.jfif" alt="" onclick="cambiarImagen(this)">
+        <img src="./img/1.jfif" 
+             id="img_1"
+             alt="" 
+             onclick="cambiarImagen(this)">
+        <img src="./img/2.jfif" 
+             id="img_2"
+             alt="" 
+             onclick="cambiarImagen(this)">
+        <img src="./img/3.jfif" 
+             id="img_3"
+             alt="" 
+             onclick="cambiarImagen(this)">
+        <img src="./img/4.jfif" 
+             id="img_4"
+             alt="" 
+             onclick="cambiarImagen(this)">
     </div>
     <script src="./js/ejemplo07.js"></script>
 </body>
