--- a/HTML5_II/PROFESOR/ejemplo10.html
+++ b/HTML5_II/PROFESOR/ejemplo10.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo07</title>
     <link rel="shortcut icon" href="../img/uneweb_icono.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/ejemplo07.css">
+    <link rel="stylesheet" href="./css/ejemplo10.min.css">
+    <!-- Declaración de la librería jQuery -->
+    <script src="../jquery/jquery-3.7.1.min.js"></script>
 </head>
 <body>
     <h1>Galería</h1>
+    <div id="fecha_hora"></div>
     <div id="principal">
         <img id="imagen_principal" src="./img/1.jfif" alt="">
     </div>
@@ -30,6 +33,7 @@
              alt="" 
              onclick="cambiarImagen(this)">
     </div>
-    <script src="./js/ejemplo07.js"></script>
+    <script src="./js/ejemplo10.min.js"></script>
+    
 </body>
 </html>
